# python_openai_quickstart

./: README.md  pyproject.toml
python_openai_quickstart/: main.py  openai_wrapper.py
