[tool.poetry]
name = "python-openai-quickstart"
version = "0.1.0"
description = ""
authors = ["behbc <bruno.behbc@gmail.com>"]
readme = "README.md"
packages = [{include = "python_openai_quickstart"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.26.1"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
